dist/1.0/bin/sample/retrieveUnpackaged/objects/Attribute_Default_Value__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Relation to Attribute definition.</description>
        <inlineHelpText>Relation to Attribute definition.</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Attribute Default Values</relationshipLabel>
        <relationshipName>Attribute_Default_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Realtion to Unified Product (Main Product). Legacy field (not used anymore).</description>
        <inlineHelpText>Realtion to Unified Product (Main Product). Legacy field (not used anymore).</inlineHelpText>
        <label>Unified Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Attribute Default Values</relationshipLabel>
        <relationshipName>Attribute_Default_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBundle__c</fullName>
        <description>Relation to Bundle definition. Context fot this default value.</description>
        <inlineHelpText>Relation to Bundle definition. Context fot this default value.</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Attribute Default Values</relationshipLabel>
        <relationshipName>Attribute_Default_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Relation to Component definition. Context fot this default value.</description>
        <inlineHelpText>Relation to Component definition. Context fot this default value.</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Attribute Default Values</relationshipLabel>
        <relationshipName>Attribute_Default_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Value that should be set as related Attribute&apos;s default.</description>
        <inlineHelpText>Value that should be set as related Attribute&apos;s default.</inlineHelpText>
        <label>Default Value</label>
        <length>7200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Attribute with this value assigned is editable. Not used in Product Configurator.</description>
        <inlineHelpText>Indicates if Attribute with this value assigned is editable. Not used in Product Configurator.</inlineHelpText>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute Default Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Component__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Default Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Default Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>